add course image feature